# mundane-timer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mundane-timer/: timer.py
src/mundane_timer/: __init__.py  timer.py
