[project]
name = "mundane-timer"
version = "0.1"
dependencies = [
    "pandas>2.0"
    ]
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/wolrechris/mundane-timer"
